fix Coding Standards scanning reports